--- a/.github/workflows/gitstream.yml
+++ b/.github/workflows/gitstream.yml
@@ -27,10 +27,10 @@ on:
           description: Optional resolver token for resolver service
           required: false
           default: ''
-      debug_mode:
-          description: 'Run parser in debug mode'
-          required: false
-          default: true
+#       debug_mode:
+#           description: 'Run parser in debug mode'
+#           required: false
+#           default: true
 
 jobs:
   gitStream:
@@ -49,4 +49,4 @@ jobs:
           installation_id: ${{ github.event.inputs.installation_id }}
           resolver_url: ${{ github.event.inputs.resolver_url }}
           resolver_token: ${{ github.event.inputs.resolver_token }}
-          debug_mode: true
+#           debug_mode: true
